--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,5 @@
 # C/C++ with GCC
-- task: MSBuild@1
-  inputs:
-    solution: '**/*.sln'
-    msbuildArchitecture: 'x64'
+
 # Build your C/C++ project with GCC using make.
 # Add steps that publish test results, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/c-cpp/gcc
@@ -17,3 +14,9 @@ steps:
 - script: |
     make
   displayName: 'make'
+  condition: 
+- task: MSBuild@1
+  inputs:
+    solution: '**/*.sln'
+    msbuildArchitecture: 'x64'
+    platform: 'Debug'
