Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,4 +10,5 @@ steps:
   inputs:
     solution: '**/libMon/*.sln'
     msbuildArchitecture: 'x64'
-    platform: 'Debug'
+    configuration: 'Debug'
+    
