--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,12 +3,14 @@ trigger:
 - master
 
 pool:
-  vmImage: vs2017-win2016
+  vmImage: ubuntu-latest
 
 steps:
 - task: MSBuild@1
   inputs:
-    solution: '**/libMon/*.sln'
-    msbuildArchitecture: 'x64'
+    solution: '**\libMon\*.sln'
+    vsVersion: '16.0'
+    platform: 'x64'
     configuration: 'Debug'
     clean: true
+    msbuildArchitecture: 'x64'
