--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,12 +21,11 @@ steps:
     script: |
       echo Test Start 
 
-      echo $(Build.ArtifactStagingDirectory)
-      cd $(Build.ArtifactStagingDirectory)
+      echo $(Build.SourcesDirectory)
+      cd $(Build.SourcesDirectory)
       ls
 
       cd libMon
-      ls
       cd x64
       cd Debug
     
