Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: windows-latest
 
 
 steps:
@@ -20,8 +20,6 @@ steps:
     script: |
       echo Test Start 
 
-      echo $(Build.SourcesDirectory)
-      cd $(Build.SourcesDirectory)
       ls
 
       cd libMon
